<resources>
    <string name="app_name">Black Coffer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_network">My Network</string>
    <string name="switch_to_business">Switch to Business</string>
    <string name="switch_to_merchant">Switch to Merchant</string>
    <string name="dating">Dating</string>
    <string name="matrimony">Matrimony</string>
    <string name="buy_sell_rent">Buy-Sell-Rent</string>
    <string name="jobs">Jobs</string>
    <string name="business_cards">Business Cards</string>
    <string name="netclan_groups">Netclan Groups</string>
    <string name="notes">Notes</string>
    <string name="live_locations">Live Locations</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_amp_explore"><![CDATA[Save & Explore]]></string>
    <string name="coffee">Coffee</string>
    <string name="business">Business</string>
    <string name="hobbies">Hobbies</string>
    <string name="friendship">Friendship</string>
    <string name="movies">Movies</string>
    <string name="dinning">Dinning</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="select_local_distance">Select Hyper local Distance</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="select_your_availability">Select Your Availability</string>
    <string name="one_km">1 Km</string>
    <string name="hund_km">100 Km</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="common_msg">Hi community! I am open to new Connection</string>
</resources>